[project]
name = "knowledge"
version = "0.1.0"
description = ""
authors = [
    {name = "Bevstrogan",email = "bevstrogan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "ipython (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
